--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,65 @@
-
+body {
+    width: 960px;
+    margin: 10px auto;
+}
+h1 {
+    color: #777777;
+    border-bottom: 1px solid #777777    
+}
+h2 {
+    color: #aa0000;
+    border-bottom: 1px dashed #aa0000;
+}
+hr {
+    clear: both;
+}
+.nav-link {
+    background: #000000;
+    color: #ffffff;
+    display: block;
+    float: left;
+    margin: 20px;
+    padding: 20px;
+    text-decoration: none;
+}
+.list{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.item {
+    float: left;
+    margin: 10px;
+    padding: 10px;
+}
+.main {
+    float: left;
+    width: 70%;
+}
+.side-bar {
+    background: #e7e7e7;
+    float: right;
+    width: 20%;
+}
+.footer {
+    border-top: 1px solid #000000;
+    clear: both;
+    padding: 10px 0 0 0;
+}
+.image-list2 {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.image-list2 li{
+    float: left;
+    padding: 10px;
+    margin: 10px;
+}
+.image-list2 img{
+    height: 100px;
+    width: 100px;
+}
+.image-list2 h4{
+    text-align: center;
+}
